--- a/de-DE.plg_search_lupo.ini
+++ b/de-DE.plg_search_lupo.ini
@@ -1,9 +1,8 @@
-; @package		Joomla
-; @subpackage	LUPO
+; @package		LUPO
 ; @copyright	Copyright (C) databauer / Stefan Bauer
+; @license		License GNU General Public License version 2 or later
 ; @author		Stefan Bauer
 ; @link			http://www.ludothekprogramm.ch
-; @license		License GNU General Public License version 2 or later
 ; @note			Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_SEARCH_LUPO="Suche - LUPO Spiele"
