added option to hide photo in search result

--- a/de-DE.plg_search_lupo.ini
+++ b/de-DE.plg_search_lupo.ini
@@ -8,3 +8,5 @@
 PLG_SEARCH_LUPO="Suche - LUPO Spiele"
 PLG_SEARCH_LUPO_XML_DESCRIPTION="Erlaubt das Durchsuchen der LUPO Spielekomponente."
 PLG_SEARCH_LUPO_TOYS="Spiele"
+PLG_SEARCH_LUPO_PHOTO="Foto"
+PLG_SEARCH_LUPO_DESC="Zeigt das Foto im Suchresultat an"
