--- a/en-GB.plg_search_lupo.ini
+++ b/en-GB.plg_search_lupo.ini
@@ -8,3 +8,5 @@
 PLG_SEARCH_LUPO="Search - LUPO Toys"
 PLG_SEARCH_LUPO_XML_DESCRIPTION="Enables searching of the LUPO Toy Component"
 PLG_SEARCH_LUPO_TOYS="Spiele"
+PLG_SEARCH_LUPO_PHOTO="Photo"
+PLG_SEARCH_LUPO_DESC="Shows the photo in the search result"
